View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033553 | Open CASCADE | OCCT:Foundation Classes | public | 2023-12-14 13:00 | 2024-07-18 21:25 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | major | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.8.1 | ||||
Summary | 0033553: Foundation Classes - HashUtils compilation problem | ||||
Description | VS 15 have internal problem to compiler optimalSeed | ||||
Steps To Reproduce | Not possible | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33553 has been created by dpasukhi. SHA-1: 53139fbfea11d09265bd61e809f38f73e15dee0c Detailed log of new commits: Author: dpasukhi Date: Thu Dec 14 10:07:21 2023 +0000 0033553: Foundation Classes - HashUtils compilation problem Updated OptimalSeed template |
|
Branch CR33553 has been updated forcibly by dpasukhi. SHA-1: 9e6d970b05d82a1486a206b19b96dc197856e9aa |
|
Dear IKA, please review: OCCT: CR33553 PROD: NO Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR0-780-beta-dpasukhi/view/COMPARE/ |
|
No remarks. Dear bugmaster, please integrate OCCT: CR33553 PROD: NO |
|
Combination - OCCT branch : IR-2023-12-15 master SHA - 83bb2a329d6bb51a194aa27abb11facde2f6a270 d2ef868da4165400c82322bd7f11b652decce47a Products branch : master SHA - 5dec4946337d2a162f4821cf085bd1e181f46ce8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18269.079999999904 / 19196.92000000018 [-4.83%] Products Total CPU difference: 11554.499999999949 / 12290.319999999989 [-5.99%] Windows-64-VC142: OCCT Total CPU difference: 20132.90625 / 20986.796875 [-4.07%] Products Total CPU difference: 12359.828125 / 14282.375 [-13.46%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33553 has been deleted by dpasukhi. SHA-1: 9e6d970b05d82a1486a206b19b96dc197856e9aa |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-14 13:00 | dpasukhi | New Issue | |
2023-12-14 13:00 | dpasukhi | Assigned To | => dpasukhi |
2023-12-14 13:08 | git | Note Added: 0114733 | |
2023-12-14 13:14 | git | Note Added: 0114734 | |
2023-12-15 13:57 | dpasukhi | Assigned To | dpasukhi => ika |
2023-12-15 13:57 | dpasukhi | Status | new => resolved |
2023-12-15 13:57 | dpasukhi | Steps to Reproduce Updated | |
2023-12-15 13:57 | dpasukhi | Note Added: 0114748 | |
2023-12-15 14:07 | dpasukhi | Note Edited: 0114748 | |
2023-12-15 16:12 | ika | Assigned To | ika => bugmaster |
2023-12-15 16:12 | ika | Status | resolved => reviewed |
2023-12-15 16:12 | ika | Note Added: 0114756 | |
2023-12-18 02:11 | vglukhik | Note Added: 0114763 | |
2023-12-18 02:17 | vglukhik | Changeset attached | => occt master 06282d9c |
2023-12-18 02:17 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-18 02:17 | dpasukhi | Status | reviewed => verified |
2023-12-18 02:17 | dpasukhi | Resolution | open => fixed |
2024-07-18 21:25 | git | Note Added: 0116252 |