0033553: Foundation Classes - HashUtils compilation problem

Updated OptimalSeed template